fixed vertical alignment

--- a/static/css/nav_bar.css
+++ b/static/css/nav_bar.css
@@ -5,6 +5,7 @@
 #navBar #navLogo {
     display: inline-block;
     margin: auto 15px;
+    vertical-align: middle;
 }
 
 #navBar #navLogo a {
@@ -17,10 +18,10 @@
 
 #navBar ul {
     display: inline-block;
+    margin: 0;
     padding: 0;
     list-style: none;
-    position: fixed;
-    margin-left: 1em;
+    vertical-align: middle;
 }
 
 #navBar li {
